<resources>
    <string name="app_name">康美医生</string>
    <string name="string_exit">再次点击退出</string>
    <string name="string_tab_clinic">首页</string>
    <string name="string_tab_query">问题库</string>
    <string name="string_tab_center">个人中心</string>
    <string name="string_tab_room">诊室</string>
    <string name="string_tab_message">消息</string>
    <string name="string_tab_service">服务</string>
    <string name="string_login_failed">登录失败</string>
    <string name="string_total">全部</string>
    <string name="string_set_online">在线咨询</string>
    <string name="string_set_voice">语音咨询</string>
    <string name="string_set_video">视频咨询</string>
    <string name="string_set_doctor">家族医生</string>
    <string name="string_set_free_query">个人义诊</string>
    <string name="string_set_long">远程会诊</string>
    <string name="string_set_vedio_voice">语音/视频咨询</string>
    <string name="string_set_yizhen">义诊</string>
    <string name="string_set_free">免费咨询</string>
    <string name="string_order_chat">图文咨询</string>
    <string name="string_order_video">语音视频</string>
    <string name="string_order_family">家庭医生</string>
    <string name="string_order">查看订单</string>
    <string name="string_yizhen">设置义诊</string>
    <string name="string_sign_recipe">待签处方</string>
    <string name="string_diagnose">常用处方</string>
    <string name="string_manage">我的患者</string>
    <string name="string_patient_detail">患者详情</string>
    <string name="string_service_setting">设置服务</string>
    <string name="string_calendar">设置排班</string>
    <string name="string_calendar1">我的排班</string>
    <string name="string_calendar2">义诊排班</string>
    <string name="string_my_calendar">我的排班表</string>
    <string name="string_service_time">服务时间:</string>
    <string name="string_query_time">就诊时间:</string>
    <string name="string_last_time">剩余时间:</string>
    <string name="string_available">已排班</string>
    <string name="string_calendar_invaild">请先获取排班信息再保存！</string>
    <string name="string_exist_cert_no">本地没有证书，请先下载证书！</string>
    <string name="string_check_pdf">查看处方</string>
    <string name="string_list_sign">已签</string>
    <string name="string_list_unsign">待签</string>
    <string name="string_medical_history1">病历</string>
    <string name="string_cancel_recipe">撤回</string>
    <string name="string_sign_recipe1">签名</string>
    <string name="string_select_all">全选</string>
    <string name="string_dialog_cert">本地没有医网签证书，是否前往证书管理?</string>
    <string name="string_dialog_permission">缺少参数，暂时无法提交</string>
    <string name="string_recipe_name">姓名</string>
    <string name="string_recipe_sex">性别</string>
    <string name="string_recipe_age">年龄</string>
    <string name="string_recipe_time">开具时间</string>
    <string name="string_recipe_tag">临床诊断</string>
    <string name="string_sign">去签名</string>
    <string name="string_delete_success">处方删除成功！</string>
    <string name="string_delete_failed">处方删除失败，请稍后再试</string>
    <string name="string_recipe_dialog">是否删除该处方?</string>
    <string name="string_medical_record">就诊记录</string>
    <string name="string_medical_history">电子病历</string>
    <string name="string_idcard">身份证号：</string>
    <string name="string_email">联系邮箱：</string>
    <string name="string_address">联系地址：</string>
    <string name="show_diagnose">查看处方</string>
    <string name="medical_history2">既往病史</string>
    <string name="nothing">无</string>
    <string name="diagnosed">初步诊断</string>
    <string name="prescribed">医嘱</string>
    <string name="VV_detail">问诊会诊</string>
    <string name="diagnose_expense">问诊费用</string>
    <string name="demand">主诉</string>
    <string name="medical_history">现病史</string>
    <string name="appointment_time">预约时段</string>
    <string name="inspection_doctor">看诊医生</string>
    <string name="patient_age">年龄</string>
    <string name="patient_sex">性别</string>
    <string name="pay_user">就诊人</string>
    <string name="voice_diagnose2">语音问诊</string>
    <string name="video_diagnose2">视频问诊</string>
    <string name="string_modify_pwd">修改密码</string>
    <string name="string_modify_failed">密码修改失败</string>
    <string name="string_modify_success">密码修改成功</string>
    <string name="string_dialog">提示</string>
    <string name="string_dialog_content">确认退出该账号?</string>
    <string name="string_dialog_update">确认升级?</string>
    <string name="string_exit_yes">确认</string>
    <string name="string_exit_no">取消</string>
    <string name="string_yue">账户余额</string>
    <string name="string_account">账户管理</string>
    <string name="person_info">个人资料</string>
    <string name="string_my_info">我的资料</string>
    <string name="string_setting">设置</string>
    <string name="string_earn">收益</string>
    <string name="string_query">问诊</string>
    <string name="string_fans">粉丝</string>
    <string name="string_myfans">我的粉丝</string>
    <string name="string_my_evaluate">患者评价</string>
    <string name="string_voice_detail">诊断详情</string>
    <string name="string_evaluate">评价</string>
    <string name="string_rules">诊所规则</string>
    <string name="string_cert">证书管理</string>
    <string name="string_drugstore">药店处方</string>
    <string name="string_drugrecipe_detail">处方详情</string>
    <string name="string_confirm_recipe">确认处方</string>
    <string name="string_about_company">关于健康云</string>
    <string name="string_logout">退出</string>
    <string name="string_money">立即提现</string>
    <string name="string_complete">完成</string>
    <string name="string_my_card">我的银行卡</string>
    <string name="string_currenty_money">当前余额：</string>
    <string name="string_enable_money">可提现余额：</string>
    <string name="string_unbind">解除绑定</string>
    <string name="string_bind_card">绑定银行卡</string>
    <string name="string_get_info">正在获取个人信息...</string>
    <string name="string_get_data">正在数据...</string>
    <string name="string_get_info_failed">获取个人信息失败,请重新登录</string>
    <string name="string_tv_name">姓名：</string>
    <string name="string_tv_hospital">所属医院：</string>
    <string name="string_tv_dept">所在科室：</string>
    <string name="string_tv_title">职称：</string>
    <string name="string_tv_idcard">身份证号：</string>
    <string name="string_tv_intro">个人简介：</string>
    <string name="string_state_send">已提交</string>
    <string name="string_state_undo">未处理</string>
    <string name="string_state_save">已保存</string>
    <string name="string_state_finish">已完成</string>
    <string name="string_apply_time">申请时间：</string>
    <string name="string_store">药店名称&#160;&#160;</string>
    <string name="string_patient_name">就诊人&#160;&#160;</string>
    <string name="string_patient_time">咨询时间&#160;&#160;</string>
    <string name="string_patient_content">病情描述&#160;&#160;</string>
    <string name="string_time">有效期&#160;&#160;</string>
    <string name="string_amount">金额&#160;&#160;</string>
    <string name="string_dealtime">处方时间&#160;&#160;</string>
    <string name="string_doc_title1">住院医师</string>
    <string name="string_doc_title2">主治医师</string>
    <string name="string_doc_title3">副主任医师</string>
    <string name="string_doc_title4">主任医师</string>
    <string name="push_notice">推送提醒</string>
    <string name="grade_for">给我们评分吧</string>
    <string name="about_us">关于我们</string>
    <string name="suggest_feedback">意见反馈</string>
    <string name="soft_introduce">软件介绍</string>
    <string name="check_update">检查更新</string>
    <string name="liscense_info">版权信息</string>
    <string name="kangmei">康美健康云 版权所有</string>
    <string name="kangmei_english">Copyright ©2015&#8211;2017 Kangmei Healthcloud.ALL Rights Reserverd.</string>
    <string name="introduce">“康美医疗”为康美药业旗下打造的一款为用户提供专业在线健康医疗服务的平台。患者可通过在线问诊交流模式，精准的数据健康管理机制，专业轻松的就医体验，快速解决各种健康问题。
【主要功能】
1、在线问诊：用户通过购买图文/语音/视频咨询/家庭医生服务后，在相应的时间内，可直接和医生交流，问诊结束后，如医生开具处方，用户收到处方并确认付款后，处方药品会直接快递给用户，成功实现在线问诊。
2、预约挂号：医院没有了号源怎么办？选择适合自己的医生，“挂号”功能一键搞定，无需排队。
3、免费咨询：提交咨询内容和相关化验单以及患病部位照片，可得到医生的免费回复。
4、今日义诊：用户选择适合自己的医生，提交义诊咨询内容和化验单以及患病部位照片。如医生回复咨询，可查看义诊咨询回复。
【温馨提示】
“康美医疗”App为用户版。如果您是医生，请在App Store搜索“康美医生”App下载体验。</string>
    <string name="add_picture">添加图片</string>
    <string name="feedback_prompt">*请填写您的反馈。（最少10个字）</string>
    <string name="submit_wait">正在提交，请稍后...</string>
    <string name="feedback_success">意见反馈提交成功。</string>
    <string name="feedback_fail">意见反馈提交失败，请稍后再试。</string>
    <string name="string_service_price">服务价格</string>
    <string name="string_service_max">单日服务上限</string>
    <string name="string_price_yuan">元</string>
    <string name="string_price_person">人</string>
    <string name="string_price_vedio">元/5分钟</string>
    <string name="string_price_doctor">元/月</string>
    <string name="string_back">返回</string>
    <string name="string_save">保存</string>
    <string name="string_missing_parm">价格内容不能为空！</string>
    <string name="string_missing_parm1">单日服务人数不能为空！</string>
    <string name="string_invaild">必须先打开图文、语音、视频咨询，才能开启家庭医生！</string>
    <string name="string_invaild1">必须先打开图文，才能开启义诊！</string>
    <string name="string_freecalendar">可排班</string>
    <string name="string_freecalendar1">已排班</string>
    <string name="string_freecalendar_remind">参数不全，请稍后再试</string>
    <string name="string_relogin">登录超时，请重新登录</string>
    <string name="string_wait">正在加载数据，请稍候</string>
    <string name="string_wait_save">正在保存数据，请稍候</string>
    <string name="string_save_success">设置成功</string>
    <string name="string_save_failed">数据保存失败，请稍候重试</string>
    <string name="string_apptoken">请求失败，请稍候重试</string>
    <string name="get_identify_code_success">获取验证码成功</string>
    <string name="get_identify_code_failed">获取验证码失败</string>
    <string name="find_pwd_success">修改成功，请重新登录</string>
    <string name="find_pwd_failed">找回密码失败，请稍后再试</string>
    <string name="open_pdf">打开处方pdf</string>
    <string name="download_pdf">下载处方pdf</string>
    <string name="re_download">重新下载</string>
    <string name="downloading">下载中...</string>
    <string name="open_pdf_fail">打开处方pdf失败，请确保手机上已经安装pdf阅读工具。</string>
    <string name="diagnose_detail">处方详情</string>
    <string name="string_money_title">￥</string>
    <string name="string_money_total">合计：</string>
    <string name="string_online">图文咨询</string>
    <string name="string_voice">语音咨询</string>
    <string name="string_video">视频咨询</string>
    <string name="string_video1">视频问诊</string>
    <string name="string_video2">视话问诊</string>
    <string name="string_elect_recipe">电子处方</string>
    <string name="string_recipe_warning">请先选择处方！</string>
    <string name="string_recipe_warning1">证书不存在！</string>
    <string name="string_recipe_warning2">签章不存在！</string>
    <string name="string_recipe_warning3">参数为空！</string>
    <string name="string_cancel">取消</string>
    <string name="string_choose_card">请选择银行卡</string>
    <string name="string_bank_info2">提现金额：</string>
    <string name="string_bank_info3">元</string>
    <string name="string_account_money">请输入提现金额</string>
    <string name="string_next_step">下一步</string>
    <string name="string_crash_success">提现成功</string>
    <string name="string_crash_success_info">现金将会打入您所绑定的银行账户，请注意查收。</string>
    <string name="string_bank_card_num1">银行卡号：</string>
    <string name="string_old_pwd">原密码</string>
    <string name="string_new_pwd">新密码</string>
    <string name="string_new_pwd1">新密码确认</string>
    <string name="string_pwd_hint1">请输入原密码</string>
    <string name="string_pwd_hint2">请输入新密码</string>
    <string name="string_pwd_hint3">再次确认新密码</string>
    <string name="home_doctor">家庭医生</string>
    <string name="home_doctor_desc">给居民提供付费家庭医生服务</string>
    <string name="service_introduce">服务介绍</string>
    <string name="service_introduce_one">1.提供诊疗服务时，做到诊室内医生和就诊居民“一对一”交流。目的是为医生和就诊居民营造舒心的诊疗氛围，保护患者隐私。</string>
    <string name="service_introduce_two">2.开展门诊接诊服务时，要根据就诊居民的实际情况，按照技术操作规范提供诊疗服务，并保证时间能与就诊居民进行充分交流。目的是保证诊疗质量，和谐医患关系。</string>
    <string name="start_service">开通服务</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期日</string>
</resources>