<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_sign_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:visibility="gone"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_close"
        style="@style/SignTextView"
        android:gravity="bottom"
        android:textColor="@color/color_tag_string"
        android:textSize="@dimen/middle_font_size"
        android:text="@string/string_cancel"/>
    <TextView
        android:layout_height="match_parent"
        android:layout_width="1px"
        android:background="@color/divider"
        android:text=""/>
    <TextView
        android:id="@+id/tv_cancel_recipe"
        style="@style/SignTextView"
        android:gravity="center"
        android:textColor="@color/color_button_orange"
        android:textSize="@dimen/large_font_size"
        android:text="@string/string_cancel_recipe"/>
    <TextView
        android:id="@+id/tv_sign_recipe"
        style="@style/SignTextView"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/large_font_size"
        android:background="@color/color_main_green"
        android:text="@string/string_sign_recipe1"/>

    <LinearLayout
        android:id="@+id/ll_sign_all"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_main_string"
            android:textSize="@dimen/middle_font_size"
            android:text="@string/string_select_all" />

        <CheckBox
            android:id="@+id/cb_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            style="@style/CustomCheckBoxTheme"/>
    </LinearLayout>
</LinearLayout>
