<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/drop_down"
    android:minWidth="80dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/im"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/string_online"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_listview_divider" />

    <TextView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/string_video2"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_listview_divider" />

    <TextView
        android:id="@+id/elect_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/string_elect_recipe"
        android:textColor="@color/white"
        android:textSize="13sp" />

</LinearLayout>